<resources>
    <string name="app_name">TeddyFood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="phonenum">PhoneNum</string>
    <string name="staff_id">Staff ID</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="xxx">XXX</string>
    <string name="gender">Gender</string>
    <string name="state">State</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="forget_password">Forget Password</string>
    <string name="sent">Sent</string>
    <string name="enter_4_digit_otp">Enter 4-digit OTP</string>
    <string name="app_email">App Email</string>
    <string name="submit">Submit</string>
    <string name="donation">Donation</string>
    <string name="food_donation">Food Donation</string>
    <string name="thank_list">Thank List</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="phone">Phone</string>
    <string name="insert_events">Insert Events</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="id">Id</string>
    <string name="map">Map</string>
    <string name="events_management">Events Management</string>
    <string name="insert">Insert</string>
    <string name="delete_all">Delete All</string>
    <string name="id_upper">ID</string>
    <string name="update_events">Update Events</string>
    <string name="delete">Delete</string>
    <string name="update_donation">Update Donation</string>
    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="capture">Capture</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="staff_listing">Staff Listing</string>
    <string name="add_staff">Add Staff</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="staff_detail">Staff Detail</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="volunteer">Volunteer</string>
</resources>