<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".managerLogIn.UnblockFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

    <EditText
        android:id="@+id/editUnblockEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/editUnblockEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/editUnblockEmail" />

    <Button
        android:id="@+id/btnUnblockSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sent"
        app:layout_constraintBottom_toBottomOf="@+id/editUnblockEmail"
        app:layout_constraintStart_toEndOf="@+id/editUnblockEmail"
        app:layout_constraintTop_toTopOf="@+id/editUnblockEmail" />

    <EditText
        android:id="@+id/editUnblockOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/editUnblockEmail" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_4_digit_otp"
        app:layout_constraintBottom_toBottomOf="@+id/editUnblockOtp"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/editUnblockOtp" />

    <EditText
        android:id="@+id/editUnblockAppEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/editUnblockOtp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="Unblock Email"
        app:layout_constraintBottom_toBottomOf="@+id/editUnblockAppEmail"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/editUnblockAppEmail" />

    <Button
        android:id="@+id/btnUnblockSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/editUnblockAppEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>